--- a/package.json
+++ b/package.json
@@ -1,5 +1,14 @@
 {
   "dependencies": {
     "@alpacahq/alpaca-trade-api": "^3.0.1"
-  }
+  },
+  "name": "ocr-project-2022",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
