Adding an initialize average

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "dependencies": {
     "@alpacahq/alpaca-trade-api": "^3.0.1",
-    "lodash": "^4.17.21",
-    "technicalindicators": "^3.1.0"
+    "numpy": "^0.0.1"
   }
 }
